Preserve playlist contents during concurrent updates and enforce repeat channel restrictions